--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl:
 url: https://mazhuang.org
 date_format: "ordinal"
 title: Welcome to ydr's blog
-subtitle: "carecu"
+subtitle: "Welcome to ydr's blog"
 description: "ydr的个人博客"
 keywords: 
 timezone: Asia/Shanghai
