--- a/_config.yml
+++ b/_config.yml
@@ -184,13 +184,14 @@ beaudar:
     repo: mzlogin/blog-comments
 # giscus 配置参考：https://giscus.app/zh-CN
 giscus:
-    repo: mzlogin/blog-comments
-    repo-id: MDEwOlJlcG9zaXRvcnk5MzEyNzkxNw==
-    category: Announcements
-    category-id: DIC_kwDOBY0E7c4CRtg9
+    repo: carecm/carecu.github.io
+    repo-id: R_kgDOM7r7vQ
+    category: Q&A
+    category-id: DIC_kwDOM7r7vc4CjE5p
 # 在使用其它评论组件时可点击显示 Disqus
 lazy_load_disqus : false
 
+</script>
 # ---------------- #
 #      Search      #
 # ---------------- #
